@startuml MCD

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

class flight {
  number
  departure_date
  departure_date_effective
  arrival_date
  arrival_date_effective
  total_fuel_consumption_liter
}

class airport {
  code_iata
  code_icao
  name
  country
  city
  latitude
  longitude
}

class airplane {
  registration_number
  brand
  model
  fuel_capacity_liter
  price_cents_euro
}

class employee {
  id
  first_name
  last_name
  job
  hire_date
  salary_cents_euro
}

class passenger {
  id
  first_name
  last_name
}

class ticket {
  code
  price_cents_euro
}

class customer {
  email
  password
}

class seat {
  number
}

class reservation {
  number
  date
}

airplane "0..*" -l- "1..1" flight : "Fly"
airplane "1..*" -- "1..1" seat : "Belongs"

flight "1..*" -- "0..*" employee : "Assigned to"

flight "1..1" -- "0..*" airport : "Departs"
flight "1..1" -- "0..*" airport : "Arrives"

flight "0..*" -r- "1..1" ticket : "Belongs"

ticket "1..1" -- "0..1" seat : "Takes"
ticket "1..1" -- "1..*" passenger : "Owns"
ticket "1..1" -- "1..*" reservation : "Buys"

reservation "1..1" -- "0..*" customer : "Books"

@enduml
